@@ -1,11 +1,10 @@
-
 *.Po
 *.Tpo
 *.lo
 *~
 *.o
 .dirstamp
-
+src/Makevars
 src/imslib/Makefile
 .deps
 src/imslib/config.log
